<resources>
    <string name="app_name">JajanJalanSeller</string>
    <string name="first_slide_title">Hallo Selamat Datang\nDi Jajan Jalan</string>
    <string name="second_slide_title">"Bingung udah keliling tapi sepi pembeli  "</string>
    <string name="third_slide_title">Ayo daftar sekarang agar pelanggan dapat menemukan lokasi Anda dengan mudah.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>

    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="enter_valid_password">Your password must be at least 8 character in length</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="hello_welcome">Welcome, Back!</string>
    <string name="logo">Login Ilustration</string>
    <string name="register_here">Register here</string>
    <string name="have_an_account">"Do you have an account? "</string>
    <string name="create_account">Create an Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="register_name">Name</string>
    <string name="or">or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login">Login</string>
    <string name="continue_login">Continue Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_empty">All fields must be filled in</string>
    <string name="register_with_google">Register With Google</string>
    <string name="register">Register</string>
    <string name="ok">Ok</string>
    <string name="register_password_not_match">Your confirm password not match!</string>
    <string name="register_succeed">Register Succeed!</string>
    <string name="createtoko_succeed">Create Toko Succeed!</string>
    <string name="createtoko_fail">Create Toko fail!</string>
    <string name="addres">Alamat</string>
    <string name="name_shop">Nama Toko</string>
    <string name="confirm">Lanjut</string>
    <string name="back">Kembali</string>
    <string name="buattoko">gambar buat toko\n</string>
    <string name="register_shop">Mulai Daftarkan Usaha Anda</string>
    <string name="number_phone">Nomor Telephone</string>
    <string name="imagesotre">Unggah Gambar Profil Store</string>
    <string name="buttonupladimage">ButtonUpladImage</string>
    <string name="tambahkan_detail_toko">tambahkan detail toko</string>


</resources>