<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".ui.toko.CreateTokoActivity">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/buattoko"
        android:src="@drawable/create_toko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/tv_create_toko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/register_shop"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nameToko"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:boxStrokeColor="@color/blue"

            app:startIconDrawable="@drawable/ic_shop"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="421dp">

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"

                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:hint="@string/name_shop"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_8sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_addres"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:boxStrokeColor="@color/blue"
            app:startIconDrawable="@drawable/ic_addres_shop"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="421dp">

            <EditText
                android:id="@+id/ed_register_addres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:hint="@string/addres"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_8sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_numberPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:boxStrokeColor="@color/blue"
            app:startIconDrawable="@drawable/ic_phone"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="421dp">

            <EditText
                android:id="@+id/ed_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"

                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:hint="@string/number_phone"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/_8sdp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>